[package]
name = "merkle_tree_powdr"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmaps = { version = "3.2.0", default-features = false }
ruint = { version = "1.10.1", default-features = false }

powdr-riscv-runtime = { git = "https://github.com/powdr-labs/powdr", branch = "main", optional = true }

[features]
default = ["powdr"]
powdr = [ "powdr-riscv-runtime" ]
